[tool.poetry]
name = "yousearch"
version = "0.1.0"
description = "Interactive CLI to fetch and browse transcripts of YouTube videos"
authors = ["Konstantin <buecheko@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_transcript_api = "^0.3.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
